kubernetes/cluster/backup/backblaze/backblaze.yaml
# Service: Backblaze
# Label: app.kubernetes.io/name: backblaze
---
apiVersion: v1
kind: Service
metadata:
  name: backblaze
  namespace: backup
  labels:
    app.kubernetes.io/name: backblaze
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5900
      targetPort: 5900
      name: vnc
  selector:
    app.kubernetes.io/name: backblaze
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backblaze
  namespace: backup
  labels:
    app.kubernetes.io/name: backblaze
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: backblaze
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
  template:
    metadata:
      namespace: backup
      labels:
        app.kubernetes.io/name: backblaze
    spec:
      restartPolicy: Always
      containers:
        - name: backblaze
          image: tessypowder/backblaze-personal-wine:v1.9
          resources:
            requests:
              memory: 250Mi
              cpu: 250m
            limits:
              memory: 1Gi
              cpu: 1000m
          ports:
            - containerPort: 5900
              name: vnc
          volumeMounts:
            - name: backblaze-config
              mountPath: /config
            # PV created by the `x-backup-shared`
            - name: spin-service
              mountPath: /drive_d
      nodeSelector:
        beta.kubernetes.io/arch: amd64
      volumes:
        - name: backblaze-config
          persistentVolumeClaim:
            claimName: backblaze-config
        # PV created by the `x-backup-shared`
        - name: spin-service
          persistentVolumeClaim:
            claimName: spin-service
