kubernetes/cluster/backup/backblaze/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backblaze
  namespace: backup
  labels:
    app.kubernetes.io/name: backblaze
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  rules:
    - host: bb.brhd.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: backblaze
                port:
                  number: 5800
  tls:
    - hosts:
        - bb.brhd.io
